[gd_scene load_steps=4 format=3 uid="uid://c3pxdivyavpve"]

[ext_resource type="Texture2D" uid="uid://yskqdosnqs6v" path="res://abstractTile_04.png" id="1_bwews"]
[ext_resource type="Script" path="res://enemy.gd" id="1_nwqll"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pm41i"]
radius = 22.0227

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_nwqll")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_bwews")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 33)
shape = SubResource("CircleShape2D_pm41i")

[node name="RayCast1" type="RayCast2D" parent="."]
rotation = -1.5708
target_position = Vector2(0, 800)

[node name="RayCast2" type="RayCast2D" parent="."]
rotation = -1.6057
target_position = Vector2(0, 800)

[node name="RayCast3" type="RayCast2D" parent="."]
rotation = -1.53589
target_position = Vector2(0, 800)
